fw/esp-sonostream/build/log/idf_py_stdout_output_99125
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd "/home/abhi/University of Michigan Dropbox/Abhipol Vibhatasilpin/school/cse598/sonotouch/fw/sonostream/build/bootloader/esp-idf/esptool_py" && /home/abhi/.espressif/python_env/idf5.5_py3.13_env/bin/python /home/abhi/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/abhi/University\ of\ Michigan\ Dropbox/Abhipol\ Vibhatasilpin/school/cse598/sonotouch/fw/sonostream/build/bootloader/bootloader.bin
Bootloader binary size 0x52b0 bytes. 0x2d50 bytes (35%) free.
[2/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/sonostream.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/sonostream.c.obj 
/home/abhi/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-2290-g94cfe394fe-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/home/abhi/University of Michigan Dropbox/Abhipol Vibhatasilpin/school/cse598/sonotouch/fw/sonostream/build/config" -I"/home/abhi/University of Michigan Dropbox/Abhipol Vibhatasilpin/school/cse598/sonotouch/fw/sonostream/main" -I/home/abhi/esp/esp-idf/components/newlib/platform_include -I/home/abhi/esp/esp-idf/components/freertos/config/include -I/home/abhi/esp/esp-idf/components/freertos/config/include/freertos -I/home/abhi/esp/esp-idf/components/freertos/config/xtensa/include -I/home/abhi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/abhi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/abhi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/abhi/esp/esp-idf/components/freertos/esp_additions/include -I/home/abhi/esp/esp-idf/components/esp_hw_support/include -I/home/abhi/esp/esp-idf/components/esp_hw_support/include/soc -I/home/abhi/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/abhi/esp/esp-idf/components/esp_hw_support/dma/include -I/home/abhi/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/abhi/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/abhi/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/abhi/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/abhi/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/abhi/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/abhi/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/abhi/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/abhi/esp/esp-idf/components/heap/include -I/home/abhi/esp/esp-idf/components/heap/tlsf -I/home/abhi/esp/esp-idf/components/log/include -I/home/abhi/esp/esp-idf/components/soc/include -I/home/abhi/esp/esp-idf/components/soc/esp32s3 -I/home/abhi/esp/esp-idf/components/soc/esp32s3/include -I/home/abhi/esp/esp-idf/components/soc/esp32s3/register -I/home/abhi/esp/esp-idf/components/hal/platform_port/include -I/home/abhi/esp/esp-idf/components/hal/esp32s3/include -I/home/abhi/esp/esp-idf/components/hal/include -I/home/abhi/esp/esp-idf/components/esp_rom/include -I/home/abhi/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/abhi/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/abhi/esp/esp-idf/components/esp_rom/esp32s3 -I/home/abhi/esp/esp-idf/components/esp_common/include -I/home/abhi/esp/esp-idf/components/esp_system/include -I/home/abhi/esp/esp-idf/components/esp_system/port/soc -I/home/abhi/esp/esp-idf/components/esp_system/port/include/private -I/home/abhi/esp/esp-idf/components/xtensa/esp32s3/include -I/home/abhi/esp/esp-idf/components/xtensa/include -I/home/abhi/esp/esp-idf/components/xtensa/deprecated_include -I/home/abhi/esp/esp-idf/components/lwip/include -I/home/abhi/esp/esp-idf/components/lwip/include/apps -I/home/abhi/esp/esp-idf/components/lwip/include/apps/sntp -I/home/abhi/esp/esp-idf/components/lwip/lwip/src/include -I/home/abhi/esp/esp-idf/components/lwip/port/include -I/home/abhi/esp/esp-idf/components/lwip/port/freertos/include -I/home/abhi/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/abhi/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/abhi/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/abhi/esp/esp-idf/components/esp_driver_i2s/include -I/home/abhi/esp/esp-idf/components/esp_driver_gpio/include -I/home/abhi/esp/esp-idf/components/esp_driver_uart/include -I/home/abhi/esp/esp-idf/components/vfs/include -I/home/abhi/esp/esp-idf/components/esp_wifi/include -I/home/abhi/esp/esp-idf/components/esp_wifi/include/local -I/home/abhi/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/abhi/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/abhi/esp/esp-idf/components/esp_event/include -I/home/abhi/esp/esp-idf/components/esp_phy/include -I/home/abhi/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/abhi/esp/esp-idf/components/esp_netif/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=/home/abhi/University of Michigan Dropbox/Abhipol Vibhatasilpin/school/cse598/sonotouch/fw/sonostream=." -fmacro-prefix-map=/home/abhi/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/sonostream.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/sonostream.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/sonostream.c.obj -c '/home/abhi/University of Michigan Dropbox/Abhipol Vibhatasilpin/school/cse598/sonotouch/fw/sonostream/main/sonostream.c'
/home/abhi/University of Michigan Dropbox/Abhipol Vibhatasilpin/school/cse598/sonotouch/fw/sonostream/main/sonostream.c: In function 'vpu_init':
/home/abhi/University of Michigan Dropbox/Abhipol Vibhatasilpin/school/cse598/sonotouch/fw/sonostream/main/sonostream.c:94:9: error: expected '}' before '.' token
   94 |         .gpio_cfg = {
      |         ^
/home/abhi/University of Michigan Dropbox/Abhipol Vibhatasilpin/school/cse598/sonotouch/fw/sonostream/main/sonostream.c:67:38: note: to match this '{'
   67 |     i2s_pdm_rx_config_t vpu_rx_cfg = {
      |                                      ^
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
